# python-project-52

./: .codeclimate.yml  .env.sample  .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.tx  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
task_manager/: mixins.py  rollbar.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_rename_labels_label.py  0003_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_statuses_status.py  0003_alter_status_name.py
task_manager/tasks/: filter.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_author_alter_tasks_description_and_more.py  0002_initial.py  0003_alter_tasks_author.py  0004_alter_tasks_author.py  0005_labelrelationtask_tasks_labels.py  0006_alter_tasks_labels.py  0007_alter_tasks_labels.py  0008_rename_tasks_task.py  0009_alter_task_author_alter_task_description_and_more.py  0010_alter_task_status.py  0011_alter_task_author_alter_task_executor.py
task_manager/templates/: base.html  form.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/tests/: __init__.py  test_auth.py  tests_labels.py  tests_statuses.py  tests_tasks.py  tests_users.py
task_manager/users/: forms.py  mixins.py  models.py  password_validation.py  tests.py  urls.py  views.py
(+9 files in other folders)
